--- a/EMIOrNot/res/layout/activity_main.xml
+++ b/EMIOrNot/res/layout/activity_main.xml
@@ -111,6 +111,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingRight="0dp" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/lblBankRate" />
+
+        <EditText
+            android:id="@+id/bankRate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:ems="10"
+            android:gravity="right"
+            android:inputType="numberDecimal"
+            android:maxLength="5" />
+
+        <TextView
+            android:layout_width="1sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingRight="0dp"
+            android:text="@string/lblRate_percent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:orientation="horizontal"
         android:paddingTop="10dp" >
