--- a/EMIOrNot/res/layout/activity_main.xml
+++ b/EMIOrNot/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:layout_weight="3"
             android:ems="10"
             android:gravity="right"
-            android:inputType="number"
+            android:inputType="numberSigned"
             android:maxLength="12" >
 
             <requestFocus />
@@ -54,7 +54,7 @@
             android:ems="10"
             android:gravity="right"
             android:inputType="numberDecimal"
-            android:maxLength="5" />
+            android:maxLength="2" />
 
         <TextView
             android:layout_width="1sp"
@@ -82,7 +82,7 @@
             android:layout_weight="3"
             android:ems="10"
             android:gravity="right"
-            android:inputType="number"
+            android:inputType="numberSigned"
             android:maxLength="4" />
     </LinearLayout>
 
@@ -104,7 +104,7 @@
             android:layout_weight="3"
             android:ems="10"
             android:gravity="right"
-            android:inputType="number"
+            android:inputType="numberSigned"
             android:maxLength="12" />
     </LinearLayout>
 
