--- a/EMIOrNot/res/layout/activity_main.xml
+++ b/EMIOrNot/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:paddingTop="25dp" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -143,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:orientation="horizontal"
-        android:paddingTop="10dp" >
+        android:paddingTop="50dp" >
 
         <Button
             android:id="@+id/btnAnalyze"
