--- a/EMIOrNot/res/layout/activity_main.xml
+++ b/EMIOrNot/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:ems="10"
             android:gravity="right"
             android:inputType="numberSigned"
-            android:maxLength="12" >
+            android:maxLength="9" >
 
             <requestFocus />
         </EditText>
@@ -54,7 +54,7 @@
             android:layout_weight="5"
             android:ems="10"
             android:gravity="right"
-            android:inputType="numberDecimal"
+            android:inputType="numberSigned"
             android:maxLength="2" />
 
         <TextView
@@ -102,11 +102,11 @@
             android:id="@+id/fees"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="5"
             android:ems="10"
             android:gravity="right"
             android:inputType="numberSigned"
-            android:maxLength="12" />
+            android:maxLength="9" />
     </LinearLayout>
 
     <LinearLayout
@@ -128,8 +128,8 @@
             android:layout_weight="5"
             android:ems="10"
             android:gravity="right"
-            android:inputType="numberDecimal"
-            android:maxLength="5" />
+            android:inputType="numberSigned"
+            android:maxLength="2" />
 
         <TextView
             android:layout_width="1sp"
